--- a/source/Server/Server.vcxproj.filters
+++ b/source/Server/Server.vcxproj.filters
@@ -27,10 +27,13 @@
     <ClInclude Include="pch.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="ServerFramework.h">
+    <ClInclude Include="NetworkServer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="packets.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GameServer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -41,7 +44,13 @@
     <ClCompile Include="pch.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="ServerFramework.cpp">
+    <ClCompile Include="NetworkServer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Thread.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="GameServer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
