--- a/New/3DGPMF/3DGPMF.vcxproj
+++ b/New/3DGPMF/3DGPMF.vcxproj
@@ -154,7 +154,7 @@
     <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="GameFramework.cpp" />
     <ClCompile Include="Mesh.cpp" />
