--- a/New/3DGPMF/3DGPMF.vcxproj.filters
+++ b/New/3DGPMF/3DGPMF.vcxproj.filters
@@ -80,7 +80,7 @@
     <ClCompile Include="Timer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
