--- a/source/Client/Client/Client.vcxproj.filters
+++ b/source/Client/Client/Client.vcxproj.filters
@@ -63,6 +63,15 @@
     <ClInclude Include="pch.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Server\Server\protocol.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Network.h">
+      <Filter>클래스\h</Filter>
+    </ClInclude>
+    <ClInclude Include="OVERLAPPEDEX.h">
+      <Filter>클래스\h</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -94,6 +103,12 @@
     </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Network.cpp">
+      <Filter>클래스\cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="OVERLAPPEDEX.cpp">
+      <Filter>클래스\cpp</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
