--- a/source/Server/Server/Server.vcxproj.filters
+++ b/source/Server/Server/Server.vcxproj.filters
@@ -39,8 +39,11 @@
     <ClCompile Include="Player.cpp">
       <Filter>클래스\cpp</Filter>
     </ClCompile>
-    <ClCompile Include="CClient.cpp">
-      <Filter>소스 파일</Filter>
+    <ClCompile Include="OVERLAPPEDEX.cpp">
+      <Filter>클래스\cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="Client.cpp">
+      <Filter>클래스\cpp</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -62,8 +65,11 @@
     <ClInclude Include="Player.hpp">
       <Filter>클래스\h</Filter>
     </ClInclude>
+    <ClInclude Include="OVERLAPPEDEX.hpp">
+      <Filter>클래스\h</Filter>
+    </ClInclude>
     <ClInclude Include="Client.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>클래스\h</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
