--- a/source/Client/Client/Client.vcxproj.filters
+++ b/source/Client/Client/Client.vcxproj.filters
@@ -71,11 +71,11 @@
     <ClInclude Include="WICTextureLoader12.h">
       <Filter>클래스\헤더</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Documents\대학\4학년\졸업작품\KPUFinalGame\source\Server\Server\protocol.hpp">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Network.h">
       <Filter>클래스\헤더</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Server\Server\protocol.hpp">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
