--- a/source/Server/Server/Server.vcxproj
+++ b/source/Server/Server/Server.vcxproj
@@ -185,6 +185,9 @@
   <ItemGroup>
     <Library Include="include\lua54.lib" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="NPC.lua" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
