--- a/source/Server/Server/Server.vcxproj.filters
+++ b/source/Server/Server/Server.vcxproj.filters
@@ -40,6 +40,9 @@
     <Filter Include="Lua">
       <UniqueIdentifier>{6520d089-014c-4f72-9ea5-d8d6e6064e95}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GameServer\Timer">
+      <UniqueIdentifier>{327a4f28-8026-4726-a42c-99169b4861fa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -74,6 +77,9 @@
     </ClCompile>
     <ClCompile Include="Zone.cpp">
       <Filter>GameServer\Zone</Filter>
+    </ClCompile>
+    <ClCompile Include="Timer.cpp">
+      <Filter>GameServer\Timer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -124,6 +130,9 @@
     </ClInclude>
     <ClInclude Include="include\lualib.h">
       <Filter>리소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Timer.hpp">
+      <Filter>GameServer\Timer</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
