--- a/source/Server/Server.vcxproj.filters
+++ b/source/Server/Server.vcxproj.filters
@@ -14,35 +14,91 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
     <Filter Include="GameServer">
-      <UniqueIdentifier>{16ee60d1-daae-4921-bf1b-00b8a657e5f5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="GameServer\Zone">
-      <UniqueIdentifier>{a386aead-f628-4e6a-be29-20d65a537744}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="GameServer\Sector">
-      <UniqueIdentifier>{11f84716-5533-4c01-9dec-3a65b1ca71ed}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Object">
-      <UniqueIdentifier>{7e012f4d-757d-4e8d-9190-104ad3ad131a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Object\NPC">
-      <UniqueIdentifier>{a6619dda-a011-4605-a6fc-6e4a341057e3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Object\Player">
-      <UniqueIdentifier>{7e3118c1-50f5-4076-968e-a7b8f7163035}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="GameServer\OVERLAPPEDEX">
-      <UniqueIdentifier>{0db677bc-e163-46c9-b428-9938b0d02f6e}</UniqueIdentifier>
+      <UniqueIdentifier>{0579b98d-bd13-406e-b11e-a21d1cecee13}</UniqueIdentifier>
     </Filter>
     <Filter Include="GameServer\Session">
-      <UniqueIdentifier>{7c574bad-4abb-41b8-86ce-4984212df79f}</UniqueIdentifier>
+      <UniqueIdentifier>{3bb76aa0-a7ef-4fc2-b946-0e4e2b2d05f3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameServer\OVERLAPPEDEX">
+      <UniqueIdentifier>{3e878c94-f41f-453b-a93c-2cc4e255162e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Object">
+      <UniqueIdentifier>{a1f56cb4-a090-4fd5-b6a9-6796b3990a22}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Object\NPC">
+      <UniqueIdentifier>{5ae6fc6d-3755-44f8-a97b-2aa19c3577cf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Object\Player">
+      <UniqueIdentifier>{a4aa096f-60f9-455f-b08a-121fe420bffb}</UniqueIdentifier>
     </Filter>
     <Filter Include="Lua">
-      <UniqueIdentifier>{6520d089-014c-4f72-9ea5-d8d6e6064e95}</UniqueIdentifier>
+      <UniqueIdentifier>{57eacc7d-0e3a-47ad-9e79-cdf397c360f4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Lua\include">
+      <UniqueIdentifier>{2e88a2d9-e93e-4d85-8f87-9658fb7902e7}</UniqueIdentifier>
     </Filter>
     <Filter Include="GameServer\Timer">
-      <UniqueIdentifier>{327a4f28-8026-4726-a42c-99169b4861fa}</UniqueIdentifier>
+      <UniqueIdentifier>{cbbfb1fc-79ee-4427-9205-b84b5d21bebd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GameServer\Zone">
+      <UniqueIdentifier>{db0140fb-72c7-4f9d-9a3f-38eaaf250846}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameServer\Zone\Sector">
+      <UniqueIdentifier>{55ccc1a8-39fd-4eaf-892e-bddf216da6e6}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="pch.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GameServer.h">
+      <Filter>GameServer</Filter>
+    </ClInclude>
+    <ClInclude Include="OVERLAPPEDEX.h">
+      <Filter>GameServer\OVERLAPPEDEX</Filter>
+    </ClInclude>
+    <ClInclude Include="Session.h">
+      <Filter>GameServer\Session</Filter>
+    </ClInclude>
+    <ClInclude Include="Object.h">
+      <Filter>Object</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Object\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="Lua.h">
+      <Filter>Lua</Filter>
+    </ClInclude>
+    <ClInclude Include="NPC.h">
+      <Filter>Object\NPC</Filter>
+    </ClInclude>
+    <ClInclude Include="include\lauxlib.h">
+      <Filter>Lua\include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\lua.h">
+      <Filter>Lua\include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\lua.hpp">
+      <Filter>Lua\include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\luaconf.h">
+      <Filter>Lua\include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\lualib.h">
+      <Filter>Lua\include</Filter>
+    </ClInclude>
+    <ClInclude Include="protocol.h">
+      <Filter>GameServer</Filter>
+    </ClInclude>
+    <ClInclude Include="Timer.h">
+      <Filter>GameServer\Timer</Filter>
+    </ClInclude>
+    <ClInclude Include="Zone.h">
+      <Filter>GameServer\Zone</Filter>
+    </ClInclude>
+    <ClInclude Include="Sector.h">
+      <Filter>GameServer\Zone\Sector</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -51,92 +107,39 @@
     <ClCompile Include="pch.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Player.cpp">
-      <Filter>Object\Player</Filter>
+    <ClCompile Include="GameServer.cpp">
+      <Filter>GameServer</Filter>
     </ClCompile>
     <ClCompile Include="OVERLAPPEDEX.cpp">
       <Filter>GameServer\OVERLAPPEDEX</Filter>
     </ClCompile>
-    <ClCompile Include="GameServer.cpp">
-      <Filter>GameServer</Filter>
-    </ClCompile>
     <ClCompile Include="Session.cpp">
       <Filter>GameServer\Session</Filter>
-    </ClCompile>
-    <ClCompile Include="LuaScript.cpp">
-      <Filter>Lua</Filter>
     </ClCompile>
     <ClCompile Include="Object.cpp">
       <Filter>Object</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Object\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Lua.cpp">
+      <Filter>Lua</Filter>
+    </ClCompile>
     <ClCompile Include="NPC.cpp">
       <Filter>Object\NPC</Filter>
-    </ClCompile>
-    <ClCompile Include="Sector.cpp">
-      <Filter>GameServer\Sector</Filter>
-    </ClCompile>
-    <ClCompile Include="Zone.cpp">
-      <Filter>GameServer\Zone</Filter>
     </ClCompile>
     <ClCompile Include="Timer.cpp">
       <Filter>GameServer\Timer</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="pch.hpp">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="protocol.hpp">
-      <Filter>GameServer</Filter>
-    </ClInclude>
-    <ClInclude Include="Player.hpp">
-      <Filter>Object\Player</Filter>
-    </ClInclude>
-    <ClInclude Include="OVERLAPPEDEX.hpp">
-      <Filter>GameServer\OVERLAPPEDEX</Filter>
-    </ClInclude>
-    <ClInclude Include="GameServer.hpp">
-      <Filter>GameServer</Filter>
-    </ClInclude>
-    <ClInclude Include="Session.hpp">
-      <Filter>GameServer\Session</Filter>
-    </ClInclude>
-    <ClInclude Include="LuaScript.hpp">
-      <Filter>Lua</Filter>
-    </ClInclude>
-    <ClInclude Include="Object.hpp">
-      <Filter>Object</Filter>
-    </ClInclude>
-    <ClInclude Include="NPC.hpp">
-      <Filter>Object\NPC</Filter>
-    </ClInclude>
-    <ClInclude Include="Sector.hpp">
-      <Filter>GameServer\Sector</Filter>
-    </ClInclude>
-    <ClInclude Include="Zone.hpp">
+    <ClCompile Include="Zone.cpp">
       <Filter>GameServer\Zone</Filter>
-    </ClInclude>
-    <ClInclude Include="include\lauxlib.h">
-      <Filter>리소스 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="include\lua.h">
-      <Filter>리소스 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="include\lua.hpp">
-      <Filter>리소스 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="include\luaconf.h">
-      <Filter>리소스 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="include\lualib.h">
-      <Filter>리소스 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Timer.hpp">
-      <Filter>GameServer\Timer</Filter>
-    </ClInclude>
+    </ClCompile>
+    <ClCompile Include="Sector.cpp">
+      <Filter>GameServer\Zone\Sector</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="NPC.lua">
+    <None Include="..\..\..\..\..\..\..\Desktop\새 폴더 (2)\Server\NPC.lua">
       <Filter>Object\NPC</Filter>
     </None>
   </ItemGroup>
